ball successfully destorys non-solid tiles but passes through solid tiles.

--- a/Breakout.vcxproj
+++ b/Breakout.vcxproj
@@ -613,6 +613,7 @@
     <None Include="Dependencies\include\glm\gtx\vector_query.inl" />
     <None Include="Dependencies\include\glm\gtx\wrap.inl" />
     <None Include="Dependencies\lib\glfw3.pdb" />
+    <None Include="Game\Collision\Collision.hpp" />
     <None Include="Resources\Levels\1.lvl" />
   </ItemGroup>
   <ItemGroup>
